<?xml version="1.0" encoding="utf-8"?>


<ScrollView android:id="@+id/ScrollView01" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
<TableLayout android:layout_height="wrap_content" android:orientation="vertical" android:layout_width="fill_parent" android:id="@+id/aftReg_tbl"><TableRow android:id="@+id/TableRow01" android:layout_height="wrap_content" android:layout_width="fill_parent"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/aftReg_tvAccNum" android:text="@string/aft_reg_acc_num"></TextView>
<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/aftReg_tvAccDate" android:text="@string/aft_reg_acc_date"></TextView>
</TableRow>

<TableRow android:id="@+id/TableRow02" android:layout_height="wrap_content" android:layout_width="fill_parent"><EditText android:layout_height="wrap_content" android:paddingLeft="7dp" android:layout_width="160dp" android:id="@+id/aftReg_etAccNum" android:hint="@string/aft_reg_acc_num"></EditText>

<Button android:layout_height="wrap_content" android:paddingLeft="2dp" android:paddingRight="2dp" android:text="2010-06-01 12:30:37" android:layout_width="160dp" android:id="@+id/aftReg_btnAccDate"></Button>
</TableRow><TableRow android:id="@+id/TableRow03" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/aftReg_tvCusName" android:text="@string/aft_reg_cus_name"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/aftReg_tvCusPhon" android:text="@string/aft_reg_cus_phon"></TextView>
</TableRow><TableRow android:id="@+id/TableRow04" android:layout_width="wrap_content" android:layout_height="wrap_content"><EditText android:layout_height="wrap_content" android:layout_width="160dp" android:id="@+id/aftReg_etCusName" android:hint="@string/aft_reg_cus_name"></EditText>
<AutoCompleteTextView android:layout_height="wrap_content" android:layout_width="160dp" android:id="@+id/aftReg_aetCusPhon" android:phoneNumber="true" android:hint="@string/aft_reg_cus_phon"></AutoCompleteTextView>
</TableRow><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/aftReg_tvAddr" android:text="@string/aft_reg_cus_addr"></TextView><EditText android:layout_width="fill_parent" android:layout_height="70dp" android:id="@+id/aftReg_etAddr" android:hint="@string/aft_reg_cus_addr"></EditText>
<TableRow android:id="@+id/TableRow08" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/aft_reg_model" android:id="@+id/aftReg_tvModel"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/aftReg_tvMakeNum" android:text="@string/aft_reg_make_num"></TextView>

</TableRow><TableRow android:id="@+id/TableRow07" android:layout_width="wrap_content" android:layout_height="wrap_content">
<AutoCompleteTextView android:layout_height="wrap_content" android:layout_width="160dp" android:id="@+id/aftReg_aetModel" android:completionThreshold="1" android:hint="@string/aft_reg_model"></AutoCompleteTextView>
<EditText android:layout_height="wrap_content" android:layout_width="160dp" android:id="@+id/aftReg_etMakeNum" android:hint="@string/aft_reg_make_num"></EditText>
</TableRow><TableRow android:id="@+id/TableRow05" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/aftReg_tvSalDate" android:text="@string/aft_reg_sal_date"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/aft_reg_warranty" android:id="@+id/aftReg_tvWarranty"></TextView>

</TableRow><TableRow android:id="@+id/TableRow06" android:layout_width="wrap_content" android:layout_height="wrap_content"><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="2010-06-01" android:id="@+id/aftReg_btnSalDate"></Button><Spinner android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/aftReg_spWarranty"></Spinner>
</TableRow><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/aft_reg_acc_cont" android:id="@+id/aftReg_tvAccCont"></TextView><EditText android:layout_height="wrap_content" android:id="@+id/aftReg_etAccCont" android:layout_width="fill_parent" android:hint="@string/aft_reg_acc_cont"></EditText>





</TableLayout>

</ScrollView>
