<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:id="@+id/LinearLayout01" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical">



<LinearLayout android:id="@+id/LinearLayout02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="vertical" android:layout_marginTop="5dp" android:background="@drawable/bg_common_info"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sal_reg_date" android:layout_marginLeft="30dp" android:id="@+id/salInfo_tvDate" android:layout_marginTop="17dp"></TextView><TextView android:layout_height="wrap_content" android:textSize="20dp" android:text="2010-09-20 13:16:00" android:layout_marginLeft="40dp" android:layout_width="250dp" android:id="@+id/salInfo_tvDateValue" android:layout_marginTop="3dp"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/srv_name" android:layout_marginLeft="30dp" android:id="@+id/salInfo_tvName" android:layout_marginTop="3dp"></TextView><TextView android:layout_height="wrap_content" android:text="A/S" android:textSize="20dp" android:layout_marginLeft="40dp" android:layout_width="250dp" android:id="@+id/salInfo_tvNameValue" android:layout_marginTop="3dp"></TextView><TableRow android:id="@+id/TableRow01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3dp"><TextView android:layout_height="wrap_content" android:text="@string/sal_price" android:layout_marginLeft="30dp" android:layout_width="120dp" android:id="@+id/salInfo_tvPrice"></TextView><TextView android:layout_height="wrap_content" android:text="@string/cus_phon" android:layout_width="140dp" android:id="@+id/salInfo_tvCusPhon"></TextView></TableRow><TableRow android:id="@+id/TableRow02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3dp"><TextView android:layout_height="wrap_content" android:textSize="20dp" android:text="1234000" android:layout_marginLeft="40dp" android:layout_width="120dp" android:id="@+id/salInfo_tvPriceValue"></TextView><TextView android:layout_height="wrap_content" android:text="000-0000-0000" android:textSize="20dp" android:layout_width="140dp" android:id="@+id/salInfo_tvCusPhonValue"></TextView></TableRow><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sal_serial" android:layout_marginLeft="30dp" android:id="@+id/salInfo_tvSerial" android:layout_marginTop="3dp"></TextView><TextView android:layout_height="wrap_content" android:textSize="20dp" android:text="8494318767" android:layout_marginLeft="40dp" android:layout_width="250dp" android:id="@+id/salInfo_tvSerialValue" android:layout_marginTop="3dp"></TextView><TableRow android:id="@+id/TableRow04" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3dp"><TextView android:layout_height="wrap_content" android:text="@string/car_type" android:layout_marginLeft="30dp" android:layout_width="120dp" android:id="@+id/salInfo_tvCartype"></TextView><TextView android:layout_height="wrap_content" android:text="@string/car_num" android:layout_width="140dp" android:id="@+id/salInfo_tvCarnum"></TextView></TableRow><TableRow android:id="@+id/TableRow03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3dp">
<TextView android:layout_height="wrap_content" android:text="티코 " android:textSize="20dp" android:layout_marginLeft="40dp" android:layout_width="120dp" android:id="@+id/salInfo_tvCarTypeValue"></TextView><TextView android:layout_height="wrap_content" android:textSize="20dp" android:text="가1234" android:layout_width="140dp" android:id="@+id/salInfo_tvCarNumValue"></TextView></TableRow></LinearLayout><TableRow android:id="@+id/TableRow01" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_marginRight="1dp"><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center" android:textSize="20dp" android:paddingLeft="20dp" android:paddingRight="20dp" android:layout_marginRight="25dp" android:layout_marginLeft="7dp" android:text="@string/btnMod" android:id="@+id/salInfo_btnMod"></Button><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center" android:paddingLeft="20dp" android:paddingRight="20dp" android:textSize="20dp" android:layout_marginRight="25dp" android:text="@string/btnDel" android:id="@+id/salInfo_btnDel"></Button><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center" android:paddingLeft="20dp" android:paddingRight="20dp" android:textSize="20dp" android:layout_gravity="center" android:text="@string/btnOK" android:id="@+id/salInfo_btnOK"></Button></TableRow>
</LinearLayout>
